--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Mess Management</string>
+    <string name="splash_welcome">Welcome</string>
+    <string name="splash_by_emon_raihan">Developed By Emon Raihan</string>
 </resources>
